@@ -3,7 +3,7 @@ package com.betrybe.agrix.controller.dto;
 import com.betrybe.agrix.entity.*;
 
 import java.util.*;
-import java.util.stream.*;
+import java.util.stream.Collectors;
 
 /**
  * The type Farm dto.
@@ -12,6 +12,7 @@ public record FarmDto(
         Long id,
         String name,
         Double size,
+        PersonInfoDto person, // Alterado para apenas o ID da pessoa
         List<CropDto> crops
 ) {
 
@@ -22,17 +23,21 @@ public record FarmDto(
    * @return the farm dto
    */
   public static FarmDto fromEntity(Farm farm) {
+    // Converte Person para PersonInfoDto
+    PersonInfoDto personInfoDto = farm.getPerson() != null ? PersonInfoDto.fromEntity(farm.getPerson()) : null;
 
+    // Converte a lista de Crops para CropDtos
     List<CropDto> cropDtos = farm.getCrops() != null
             ? farm.getCrops().stream()
             .map(CropDto::fromEntity)
             .collect(Collectors.toList())
-            : Collections.emptyList();
+            : List.of();
 
     return new FarmDto(
             farm.getId(),
             farm.getName(),
             farm.getSize(),
+            personInfoDto,
             cropDtos
     );
   }
